<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMessageActivity">

    <TextView
        android:id="@+id/dmTvNombre"
        android:layout_width="177dp"
        android:layout_height="38dp"
        android:hint="texto"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/dmTvNombreLabel"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:hint="@string/tu_nombre_es"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dmTvNombre"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/dmTvApellidoLabel"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/tu_apellido_es"
        app:layout_constraintBottom_toTopOf="@+id/dmEtNewMessage"
        app:layout_constraintEnd_toStartOf="@+id/dmTvApellido"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dmTvNombreLabel"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/dmTvApellido"
        android:layout_width="177dp"
        android:layout_height="38dp"
        android:textSize="25sp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:hint="Apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dmTvNombre"
        app:layout_constraintVertical_bias="0.492" />

    <TextView
        android:id="@+id/dmTvTelefono"
        android:layout_width="103dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="508dp"
        android:text="@string/tu_numero_telefonico_es"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dmTvTelefonoLabel"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dmTvApellidoLabel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dmTvTelefonoLabel"
        android:layout_width="177dp"
        android:layout_height="38dp"
        android:textSize="25sp"
        android:layout_marginBottom="512dp"
        android:hint="Telefono"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dmTvApellido"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dmNewMessage"
        android:layout_width="195dp"
        android:layout_height="32dp"
        android:layout_marginBottom="420dp"
        android:text="@string/cual_es_el_nuevo_mensaje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dmTvTelefono"
        app:layout_constraintVertical_bias="0.767" />

    <EditText
        android:id="@+id/dmEtNewMessage"
        android:layout_width="282dp"
        android:layout_height="75dp"
        android:ems="10"
        android:hint="@string/escribe_el_mensaje_nuevo"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:text="@string/atras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dmEtNewMessage"
        app:layout_constraintVertical_bias="0.823" />
</androidx.constraintlayout.widget.ConstraintLayout>